--- a/index.html
+++ b/index.html
@@ -45,7 +45,11 @@
     <div class="count" id="js-count"></div>
     <div class="message" id="js-message"></div>
     <div class="results" id="js-results"></div>
-
+    <section>
+      <footer class="footer">
+        <h2>&copy; 2024 Timur Iagudin</h2>
+      </footer>
+    </section>
     <script src="js/main.js"></script>
   </body>
 </html>
